add headerbig 100vh adter 849px down

--- a/css/style.css
+++ b/css/style.css
@@ -993,6 +993,9 @@ img {
     .buttonSection {
         display: none;
     }
+    .headerBig {
+        height: 100vh;
+    }
 }
 
 @media (max-width: 800px) {
