add padding: 0 to footerflexsection under 600px

--- a/css/style.css
+++ b/css/style.css
@@ -1037,4 +1037,7 @@ img {
         flex-basis: 100% !important;
         flex-grow: 1;
     }
+    .footerFlexSection {
+        padding: 0;
+    }
 }
