change button width under 140px

--- a/css/style.css
+++ b/css/style.css
@@ -1021,7 +1021,7 @@ img {
     .button01 {
         font-size: 1.3rem;
         padding: 0.6rem 1.2rem;
-        width: 8.1rem;
+        width: 140px;
     }
     .text_Img_Section .img_Section {
         width: 100%;
