add height to medals

--- a/css/style.css
+++ b/css/style.css
@@ -870,6 +870,7 @@ img {
     border-top: 2px solid #a01916;
     padding-top: 20px;
     margin-top: auto;
+    height: 170px;
 }
 
 .prizeLabels .prizeLabels_Text_p {
