--- a/css/style.css
+++ b/css/style.css
@@ -310,7 +310,7 @@ a.first {
 }
 
 .headerLarge10 {
-    background: url(../img/tlo11.png);
+    background: url(../img/tlo11.jpg);
 }
 
 .headerLarge11 {
