add new break point for yearsimg logo

--- a/css/style.css
+++ b/css/style.css
@@ -1129,3 +1129,9 @@ img {
         line-height: 180%;
     }
 }
+
+@media (max-width: 799px) and (orientation: landscape) and (max-height: 600px) {
+    .yearsimg {
+        right: 0;
+    }
+}
