--- a/css/style.css
+++ b/css/style.css
@@ -962,7 +962,7 @@ img {
     }
     .nav .menuList {
         position: absolute;
-        height: calc(100vh - 71px);
+        height: 100vh;
         width: 100%;
         top: 100%;
         right: 0;
