--- a/css/style.css
+++ b/css/style.css
@@ -941,10 +941,10 @@ img {
 
 /* ===== MEDIA QUERIES ===== */
 
-@media (min-width: 1101px) and (max-width: 1400px) {
+@media (min-width: 1101px) and (max-width: 1500px) {
     h1.h1OverImg {
         font-size: 2.5rem;
-        width: 37%;
+        width: 50%;
     }
     h1.h1OverImgLarge {
         font-size: 2.0rem;
@@ -1097,6 +1097,10 @@ img {
     .nav {
         padding: 1.0rem 2.0rem;
     }
+    h1.h1OverImg {
+        width: 60%;
+        line-height: 170%;
+    }
 }
 
 @media (min-width: 850px) and (max-width: 1099px) {
@@ -1125,6 +1129,7 @@ img {
     }
     h1.h1OverImg {
         width: 60%;
+        line-height: 170%;
     }
 }
 
@@ -1163,6 +1168,11 @@ img {
     }
     h1.h1OverImg span {
         line-height: 180%;
+    }
+    h1.h1OverImg {
+        width: 90vw;
+        left: 0;
+        font-size: 1.2rem;
     }
 }
 
