--- a/css/style.css
+++ b/css/style.css
@@ -1273,8 +1273,8 @@ img {
 .fade-animation01 {
     animation: ease-in 0.8s fade-animation01;
 }
-.zoom-animation {
-    animation: ease-in 1.5s zoom-animation;
+.fade-animation02 {
+    animation: ease-in 1.5s fade-animation02;
 }
 
 @keyframes fade-animation01 {
@@ -1291,13 +1291,16 @@ img {
     }
 }
 
-@keyframes zoom-animation {
+@keyframes fade-animation02 {
     0% {
+        left: -20%;
         opacity: 0;
-        transform: scale(0.4);
+    }
+    60% {
+        opacity: 0.2;
     }
     100% {
+        left: 20%;
         opacity: 1;
-        transform: scale(1);
     }
 }
