center career text

--- a/css/style.css
+++ b/css/style.css
@@ -972,6 +972,7 @@ img {
     font-weight: 600;
     color: #000000;
     text-decoration: none;
+    text-align: center;
 }
 
 .career_section .career-btn .job-btn {
